[package]
name = "asu-class-search-query-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.12.4", features = ["json"] }
serde = "1.0.202"
serde_json = "1.0.117"
tokio = { version = "1", features = ["full"] }
tokio-macros = "2.4.0"
